styles/style.css
.slider {
    position: relative;
}

.prev,
.next {
    content: '';
    position: absolute;
    top: calc(50% - 20px);
    height: 40px;
    width: 40px;
    z-index: 1;
    cursor: pointer;
    border: 1px solid #076BFF;
    border-radius: 50%;
    background-color: white;
    display: flex;
    align-items: center;
    justify-content: center;
    background-repeat: no-repeat;
    background-position: center;
}

.next {
    right: 12px;
    background-image: url("../assets/next.svg");
}

.prev {
    left: 12px;
    background-image: url("../assets/prev.svg");
}

.next:hover {
    background-image: url("../assets/next-white.svg");
    background-color: #045ce1;

}

.prev:hover {
    background-image: url("../assets/prev-white.svg");
    background-color: #045ce1;
}

.custom-accordion .accordion-item {
    border: 0;
    background: transparent;
}

.custom-accordion .accordion-button,
.custom-accordion .accordion-button:not(.collapsed) {
    color: #fff;
    background-color: var(--bs-primary);
    background-image: var(--bs-gradient);
    box-shadow: none;
}

.custom-accordion .accordion-button::after {
    background-image: url("../assets/up.svg");
    background-size: 20px 20px;
    width: 20px;
    height: 20px;
    transform: none;
    transition: none;
    filter: none;
}

.custom-accordion .accordion-button.collapsed::after {
    background-image: url("../assets/down.svg");
    transform: none;
}


.hvr-sweep-to-right::before {
    background-color: var(--bs-btn-hover-bg);
}


@media screen and (max-width: 767px) {
    form.w-50 {
        width: 100% !important;
    }

    .w-25#hide-block {
        width: 75% !important;
    }
}

